# web-agent

./: API-documentation.docx  CMakeLists.txt  README.md  ИТОГОВЫЙ_ОТЧЁТ_ПО_ЛАБОРАТОРНЫМ_РАБОТАМ.docx  РУКОВОДСТВО ПОЛЬЗОВАТЕЛЯ.docx  РУКОВОДСТВО РАЗРАБОТЧИКА.docx  ТЕХНИЧЕСКОЕ ЗАДАНИЕ.docx  УСТАНОВКА И НАСТРОЙКА.docx
build_tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  agent.conf  cmake_install.cmake
build_tests/Testing/Temporary/: CTestCostData.txt
build_tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_config  test_config.ini  test_http  test_logger  test_main  test_parser  test_real_webagent  test_task  test_tasks_lifecycle
config/: agent.conf
src/: agent.cpp.backup
tasks/: task_1.json  task_2.json  task_3.json  task_4.json
tests/: CMakeLists.txt
